tests/neg-custom-args/captures/scoped-caps2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:5:23 ----------------------------------
5 |  val _: (x: C) => C = b // error
  |                       ^
  |                   Found:    (b : C => C)
  |                   Required: (x: C^) =>² C^²
  |
  |                   Note that the existential capture root in C^
  |                   cannot subsume the capability cap..
  |
  |                   Note that capability cap² is not included in capture set {cap³}.
  |
  |                   where:    =>   refers to a fresh root capability in the type of value b
  |                             =>²  refers to a fresh root capability in the type of value _$1
  |                             ^    refers to the universal root capability
  |                             ^²   refers to a root capability associated with the result type of (x: C^): C^²
  |                             cap  is a fresh root capability classified as SharedCapability in the type of value b
  |                             cap² is a fresh root capability in the type of value b
  |                             cap³ is a fresh root capability in the type of value _$1
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:6:18 ----------------------------------
6 |  val _: C => C = a // error
  |                  ^
  |          Found:    (a : (x: C) => C)
  |          Required: C^ =>² C^²
  |
  |          Note that capability cap is not included in capture set {cap²}.
  |
  |          where:    =>   refers to a fresh root capability in the type of value a
  |                    =>²  refers to a fresh root capability in the type of value _$2
  |                    ^    refers to the universal root capability
  |                    ^²   refers to a fresh root capability classified as SharedCapability in the type of value _$2
  |                    cap  is a fresh root capability in the type of value a
  |                    cap² is a fresh root capability in the type of value _$2
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:8:18 ----------------------------------
8 |  val _: C => C = (x: C) => a(x) // error
  |                  ^^^^^^^^^^^^^^
  |          Found:    (x: C^) ->{a} C^²
  |          Required: C^ => C^³
  |
  |          Note that capability cap is not included in capture set {cap²}
  |          because cap is not visible from cap² in value _$4.
  |
  |          where:    =>   refers to a fresh root capability in the type of value _$4
  |                    ^    refers to the universal root capability
  |                    ^²   refers to a root capability associated with the result type of (x: C^): C^²
  |                    ^³   refers to a fresh root capability classified as SharedCapability in the type of value _$4
  |                    cap  is a root capability associated with the result type of (x: C^): C^²
  |                    cap² is a fresh root capability classified as SharedCapability in the type of value _$4
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:14:18 ---------------------------------
14 |  val _: C -> C = a // error
   |                  ^
   |        Found:    (a : (x: C) -> C)
   |        Required: C^ -> C^²
   |
   |        Note that capability cap is not included in capture set {cap²}
   |        because cap is not visible from cap² in value _$6.
   |
   |        where:    ^    refers to the universal root capability
   |                  ^²   refers to a fresh root capability classified as SharedCapability in the type of value _$6
   |                  cap  is a root capability associated with the result type of (x: C^): C^³
   |                  cap² is a fresh root capability classified as SharedCapability in the type of value _$6
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:16:29 ---------------------------------
16 |  val _: C -> C = (x: C) => a(x) // error
   |                            ^^^^
   |         Found:    C^{x}
   |         Required: C^
   |
   |         Note that capability x is not included in capture set {cap}
   |         because (x : C) in enclosing function is not visible from cap in value _$8.
   |
   |         where:    ^   refers to a fresh root capability classified as SharedCapability in the type of value _$8
   |                   cap is a fresh root capability classified as SharedCapability in the type of value _$8
   |
   | longer explanation available when compiling with `-explain`
